--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="icon" href="https://fav.farm/🧙‍♂️" />
 </head>
 <body>
-    Hello
-    <script src="script.js"></script>
+    <form action="">
+        <label for="age">Enter your age</label>
+        <input type="number" id="age" name="age" min="1" max="120">
+        <button>Submit</button>
+    </form>
+    <p id="output"></p>
+    <script src="age-calc.js"></script>
 </body>
 </html>
